Risolte issues non presenti su Redmine, security hotspots ed altri errori