@@ -49,10 +49,6 @@
 
 package com.lowagie.text.pdf;
 
-import com.lowagie.text.DrawingException;
-import com.lowagie.text.pdf.PdfGraphics2D.CompositeFontDrawer;
-import com.lowagie.text.pdf.PdfGraphics2D.CompositeFontDrawer.DrawStringFunction;
-import com.lowagie.text.pdf.PdfGraphics2D.HyperLinkKey;
 import com.lowagie.text.pdf.internal.PolylineShape;
 import com.lowagie.text.utils.SystemPropertyUtil;
 import java.awt.AlphaComposite;
@@ -130,8 +126,8 @@ public class PdfGraphics2D extends Graphics2D {
     private static final int CLIP = 3;
     private static final AffineTransform IDENTITY = new AffineTransform();
 
-    private static final Set<String> LOGICAL_FONT_NAMES = Collections.unmodifiableSet(
-            new HashSet<>(Arrays.asList("Dialog", "DialogInput", "Monospaced", "Serif", "SansSerif")));
+    private static final Set<String> LOGICAL_FONT_NAMES = Set.of("Dialog", "DialogInput", "Monospaced", "Serif",
+            "SansSerif");
     private static final String BOLD_FONT_FACE_NAME_SUFFIX = ".bold";
     private static final String BOLD_ITALIC_FONT_FACE_NAME_SUFFIX = ".bolditalic";
     private final com.lowagie.text.pdf.PdfGraphics2D.CompositeFontDrawer compositeFontDrawer = new com.lowagie.text.pdf.PdfGraphics2D.CompositeFontDrawer();
@@ -319,9 +315,7 @@ public class PdfGraphics2D extends Graphics2D {
      */
     public boolean drawImage(Image img, AffineTransform xform, ImageObserver obs) {
         // Ensure img is not null
-        if (img == null) {
-            return false; // No image to draw
-        }
+        return img != null; // No image to draw
 
         // Perform any custom drawing logic you need
         // For example, you might apply the transform and draw it here.
@@ -329,12 +323,8 @@ public class PdfGraphics2D extends Graphics2D {
         // Here we simply return true for successful drawing for illustration
         // In a real implementation, you would do the actual drawing
         // If needed, handle any other relevant logic here
-        return true; // Indicate successful drawing
+        // Indicate successful drawing
     }
-
-
-
-
 
     /**
      * @see Graphics2D#drawImage(BufferedImage, BufferedImageOp, int, int)
@@ -352,7 +342,7 @@ public class PdfGraphics2D extends Graphics2D {
      * @see Graphics2D#drawRenderedImage(RenderedImage, AffineTransform)
      */
     public void drawRenderedImage(RenderedImage img, AffineTransform xform) {
-        BufferedImage image = null;
+        BufferedImage image;
         if (img instanceof BufferedImage buffImage) {
             image = buffImage;
         } else {
@@ -362,8 +352,8 @@ public class PdfGraphics2D extends Graphics2D {
             WritableRaster raster = cm.createCompatibleWritableRaster(mWidth, mHeight);
             boolean isAlphaPremultiplied = cm.isAlphaPremultiplied();
 
-            // Use Hashtable instead of HashMap
-            Hashtable<String, Object> propertiesMap = new Hashtable<>();
+            // Use HashMap instead of Hashtable
+            HashMap<String, Object> propertiesMap = new HashMap<>();
             String[] keys = img.getPropertyNames();
             if (keys != null) {
                 for (String key : keys) {
@@ -372,7 +362,7 @@ public class PdfGraphics2D extends Graphics2D {
             }
 
             // Create BufferedImage with Hashtable
-            BufferedImage result = new BufferedImage(cm, raster, isAlphaPremultiplied, propertiesMap);
+            BufferedImage result = new BufferedImage(cm, raster, isAlphaPremultiplied, new Hashtable<>(propertiesMap));
             img.copyData(raster);
             image = result;
         }
@@ -404,7 +394,6 @@ public class PdfGraphics2D extends Graphics2D {
      *
      * @param iter the AttributedCharacterIterator
      */
-    @SuppressWarnings("unchecked")
     protected void doAttributes(AttributedCharacterIterator iter) {
         underline = false;
         Set<AttributedCharacterIterator.Attribute> attributes = iter.getAttributes().keySet();
@@ -623,10 +612,10 @@ public class PdfGraphics2D extends Graphics2D {
         }
 
         // If widthValue is of type Float, return it; if Integer, cast to Float
-        if (widthValue instanceof Float) {
-            return (Float) widthValue;
-        } else if (widthValue instanceof Integer) {
-            return ((Integer) widthValue).floatValue(); // Convert Integer to Float
+        if (widthValue instanceof Float floatValue) {
+            return floatValue;
+        } else if (widthValue instanceof Integer integerValue) {
+            return integerValue.floatValue(); // Convert Integer to Float
         } else {
             return TextAttribute.WIDTH_REGULAR; // Fallback default
         }
@@ -659,10 +648,10 @@ public class PdfGraphics2D extends Graphics2D {
         }
 
         // Handle the different types that weightValue could be
-        if (weightValue instanceof Float) {
-            return (Float) weightValue;
-        } else if (weightValue instanceof Integer) {
-            return ((Integer) weightValue).floatValue(); // Convert Integer to Float
+        if (weightValue instanceof Float floatValue) {
+            return floatValue;
+        } else if (weightValue instanceof Integer integerValue) {
+            return integerValue.floatValue(); // Convert Integer to Float
         } else {
             // Return a default value if the weight is not recognized
             return font.isBold() ? TextAttribute.WEIGHT_BOLD : TextAttribute.WEIGHT_REGULAR;
@@ -780,7 +769,7 @@ public class PdfGraphics2D extends Graphics2D {
         StringBuilder stringbuffer = new StringBuilder(iter.getEndIndex());
         for (char c = iter.first(); c != '\uFFFF'; c = iter.next()) {
             if (iter.getIndex() == iter.getRunStart()) {
-                if (stringbuffer.length() > 0) {
+                if (!stringbuffer.isEmpty()) {
                     drawString(stringbuffer.toString(), x, y);
                     FontMetrics fontmetrics = getFontMetrics();
                     x = (float) (x + fontmetrics.getStringBounds(stringbuffer.toString(), this).getWidth());
@@ -1073,8 +1062,8 @@ public class PdfGraphics2D extends Graphics2D {
         this.paint = paint;
 
         if ((composite instanceof AlphaComposite co) && (paint instanceof Color paintColor) && (co.getRule() == 3)) {
-            Color c = paintColor;
-            this.paint = new Color(c.getRed(), c.getGreen(), c.getBlue(), (int) (c.getAlpha() * alpha));
+            this.paint = new Color(
+                    paintColor.getRed(), paintColor.getGreen(), paintColor.getBlue(), (int) (paintColor.getAlpha() * alpha));
             realPaint = paint;
         }
 
@@ -1210,9 +1199,6 @@ public class PdfGraphics2D extends Graphics2D {
         return font;
     }
 
-    /**
-     * @see Graphics#setFont(Font)
-     */
     /**
      * Sets the current font.
      */
@@ -1476,7 +1462,7 @@ public class PdfGraphics2D extends Graphics2D {
             return drawImage(img, null, tx, bgcolor, observer);
         } catch (IOException e) {
             // Handle IOException (e.g., log the error)
-            e.printStackTrace(); // You can replace this with a logger
+            //may add a more robust logging // You can replace this with a logger
             return false; // or some default behavior
         } catch (InterruptedException e) {
             // Handle InterruptedException
@@ -1528,7 +1514,7 @@ public class PdfGraphics2D extends Graphics2D {
             return true;
         } catch (IOException e) {
             // Handle IOException (e.g., log the error)
-            e.printStackTrace(); // You can replace this with a logger or user notification
+            //may add a more robust logging // You can replace this with a logger or user notification
             return false; // Return false or handle it appropriately
         } catch (InterruptedException e) {
             // Handle InterruptedException
@@ -1563,7 +1549,7 @@ public class PdfGraphics2D extends Graphics2D {
 
     private void internalDispose(ByteBuffer buf) {
         int last = 0;
-        int pos = 0;
+        int pos;
         ByteBuffer buf2 = cb.getInternalBuffer();
         if (kids != null) {
             for (int k = 0; k < kids.size(); k += 2) {
@@ -1840,15 +1826,12 @@ public class PdfGraphics2D extends Graphics2D {
             } else {
                 handleDefaultPaint(invert, xoffset, yoffset, fill);
             }
-        } catch (IOException e) {
+        } catch (IOException | NoninvertibleTransformException e) {
             // Handle IOException (e.g., log the error)
-            e.printStackTrace(); // Replace this with logging as necessary
+            //may add a more robust logging // Replace this with logging as necessary
         } catch (InterruptedException e) {
             // Handle InterruptedException
             Thread.currentThread().interrupt(); // Restore interrupted status
-        } catch (NoninvertibleTransformException e) {
-            // Handle NoninvertibleTransformException
-            e.printStackTrace(); // Log or handle this exception appropriately
         }
     }
 
@@ -2048,7 +2031,7 @@ public class PdfGraphics2D extends Graphics2D {
      * Since the <code>sun.*</code> packages are not part of the supported, public interface the reflection will be
      * used.
      */
-    private static class CompositeFontDrawer {
+    protected static class CompositeFontDrawer {
 
         private static final String GET_MODULE_METHOD_NAME = "getModule";
         private static final String IS_OPEN_METHOD_NAME = "isOpen";
@@ -2197,6 +2180,7 @@ public class PdfGraphics2D extends Graphics2D {
             }
 
             try {
+                assert GET_FONT2D_METHOD != null;
                 Object result = GET_FONT2D_METHOD.invoke(null, font);
                 boolean composite = result != null && result.getClass() == COMPOSITE_FONT_CLASS;
                 if (fontFamily != null) {
@@ -2260,12 +2244,6 @@ public class PdfGraphics2D extends Graphics2D {
          * {@link BaseFont base font} from the slots of the composite font witch can display all characters of the part
          * of string. If no font found the {@link BaseFont base font} from the own composite font will be used.
          *
-         * @param s
-         * @param compositeFont
-         * @param fontConverter
-         * @throws IllegalAccessException
-         * @throws IllegalArgumentException
-         * @throws InvocationTargetException
          */
         private void splitStringIntoDisplayableParts(String s, Font compositeFont,
                 Function<Font, BaseFont> fontConverter)
@@ -2321,8 +2299,9 @@ public class PdfGraphics2D extends Graphics2D {
                 Object phFont = GET_SLOT_FONT_METHOD.invoke(result, slotIndex);
                 if (phFont == null) continue;
 
+                assert CAN_DYSPLAY_METHOD != null;
                 Boolean canBeDisplayedByPhysicalFont = (Boolean) CAN_DYSPLAY_METHOD.invoke(phFont, c);
-                if (canBeDisplayedByPhysicalFont) {
+                if (Boolean.TRUE.equals(canBeDisplayedByPhysicalFont)) {
                     assert GET_FONT_NAME_METHOD != null;
                     Object fontNameResult = GET_FONT_NAME_METHOD.invoke(phFont, (Locale) null);
                     Font font = new Font((String) fontNameResult, compositeFont.getStyle(), compositeFont.getSize());
